@@ -222,7 +222,7 @@
   <string><id>287</id><value>Subtitles</value></string>
   <string><id>288</id><value>Font</value></string>
   <string><id>289</id><value>- Size</value></string>
-  <string><id>290</id><value>Volume Amplification</value></string>
+  <string><id>290</id><value>Dynamice Range Compression</value></string>
   <string><id>291</id><value>Video</value></string>
   <string><id>292</id><value>Audio</value></string>
   <string><id>293</id><value>Subtitles</value></string>
